--- a/core/templates/core/register_table.html
+++ b/core/templates/core/register_table.html
@@ -9,7 +9,7 @@
             <div class="col">
                 <div class="card stats" data-exclude="xs">
                     <div class="card-block">
-                        <div class="title-block">
+                        <div class="title-block row">
                             <div class="col-md-4">
                                 <span class="text-muted">Today's Date:</span>
                                 <span class="text-info font-weight-bold">{{ today_date }}</span>
