--- a/core/templates/layout/base.html
+++ b/core/templates/layout/base.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title> DFL Foreign Exchange {% block title %}{% endblock title %}</title>
+        <title> DFL FX {% block title %}{% endblock title %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico in the root directory -->
         <link rel="shortcut icon" type="image/png" href="{% static 'images/logo/favicon.ico' %}"/>
