added last_updated_by in create_transactions script

--- a/transactions/templates/transactions/_transaction_review.html
+++ b/transactions/templates/transactions/_transaction_review.html
@@ -20,6 +20,10 @@
             </div>
             <div><p>Attn: <span id="review-client_name2"></span></p></div>
             <div>We now confirm details of the above transaction as follows:</div>
+            <!-- Transaction Details -->
+            <div id="review-summary_box">
+                
+            </div>
             <div class="row border border-dark">
                 <div class="col">
                     We sell:<br>
@@ -95,12 +99,12 @@
                     Payment Details::<br>
                 </div>
                 <div class="col-9">
-                    <span id="review-transaction_type"></span> of <span id="review-settlement_currency2"></span><br>
+                    <span id="review-payment_details"></span><br>
                 </div>
             </div>
             <div>
                 <p>
-                    <span id="review-client_name3"></span> will send <span id="review-settlement_currency3"></span> <span id="review-total_amount2"></span> to Development Finance Limited on <span id="review-value_date3"></span>, as follows:
+                    <span id="review-client_name3"></span> will send <span id="review-settlement_currency2"></span> <span id="review-total_amount2"></span> to Development Finance Limited on <span id="review-value_date3"></span>, as follows:
                 </p>
             </div>
             <div class="row mb-3">
