--- a/transactions/templates/transactions/transactions_list.html
+++ b/transactions/templates/transactions/transactions_list.html
@@ -28,6 +28,7 @@
                                 <td>{{ transaction.client }}</td>
                                 <td>{{ transaction.contract_date }}</td>
                                 <td>
+                                    {% if transaction.transaction_type == "P" %}Purchased{% else %}Sold{% endif %}
                                     {{ transaction.foreign_currency }} {{ transaction.foreign_amount|floatformat:2|intcomma }}
                                     <i class="fa fa-long-arrow-right"></i> 
                                     {{ transaction.settlement_currency }}{{ transaction.settlement_amount|floatformat:2|intcomma }}
